--- a/wa/wa1.html
+++ b/wa/wa1.html
@@ -2,6 +2,6 @@
     <head></head>
     <body>
         <p>Hello, World!</p>
-        <p>My name is Cass Bliss!</p> <!-- Change NAME to your name! -->
+        <p>My name is Cass!</p> <!-- Change NAME to your name! -->
     </body>
 </html>
