--- a/wa/wa2.html
+++ b/wa/wa2.html
@@ -9,7 +9,7 @@
     <h1>Hello! It's Me, Cass!</h1>
         <p><em>she/her/hers</em></p>
         <p></p>
-        <a href="cassidy-bliss.com">Check Out Some of My Work</a>
+        <a href="https://www.cassidy-bliss.com">Check Out Some of My Work</a>
         <p></p>
     <img src="../img/me.jpg" style="height: 500;" width="500">
     
