--- a/wa/test.html
+++ b/wa/test.html
@@ -7,8 +7,6 @@
 </head>
 <body>
     <h1>My Cool Webpage</h1>
-    <p>This is my cool new webpage<p>
-    <h2>This is an H2</h2>
-    <h1>OOPS</h1>
+    <p>This is my cool new webpage</p>
 </body>
 </html>
