--- a/wa/wa3.html
+++ b/wa/wa3.html
@@ -8,7 +8,7 @@
 <body>
     <h1 id = "Home">Turkey Tail Mushroom (Trametes Versicolor)</h1>
 
-    
+    <p>Information on this page was referenced from <a href = "https://en.wikipedia.org/wiki/Trametes_versicolor"><em>this wikipedia page</em></a></p>
 
     <ul>
         <li><a href = "#Home">Home</a></li>
@@ -45,7 +45,7 @@
         </p>
     <h2 id = "Uses & Research" >Uses & Research</h2>
         <h3>Polysaccharide-K extract</h3>
-            <p>Polysaccharide-K (PSK or krestin), extracted from T. versicolor, is considered safe for 
+            <p><a href = "https://en.wikipedia.org/wiki/Polysaccharide-K" >Polysaccharide-K</a> (PSK or krestin), extracted from T. versicolor, is considered safe for 
                 use as an adjuvant therapy for cancer treatment in Japan where it is known as kawaratake (roof tile mushroom) 
                 and approved for clinical use. As a glycoprotein mixture, PSK has been studied in clinical 
                 research in people with various cancers and immune deficiencies, but its efficacy remains inconclusive, 
@@ -54,8 +54,9 @@
         </p>
 
     <footer>
-        <h2 id = "Other Fun Foods to Learn About"> Other Fun Foods to Learn About</h2>
-
+        <h2 id = "Other Fun Foods to Learn About:"> Other Fun Foods to Learn About</h2>
+        <p><a href = "https://ssumri.github.io/ATLS2200Assignments/wa/wa3.html" >Mangos</a></p>
+        <p><a href = "https://liviah12.github.io/wa/wa3.html">Dragon Fruit</a></p>
     </footer>
 </body>
 </html>
