errors shown in validator fixed

--- a/wa/wa3.html
+++ b/wa/wa3.html
@@ -13,12 +13,12 @@
     <ul>
         <li><a href = "#Home">Home</a></li>
         <li><a href = "#Overview">Overview</a></li>
-        <li><a href = "#Decription & Ecology">Description & Ecology</a></li>
-        <li><a href= "#Uses & Research">Uses & Research</a></li>
-        <li><a href ="#Other Fun Foods to Learn About" >Other Fun Foods to Learn About</a></li>
+        <li><a href = "#Decription&Ecology">Description & Ecology</a></li>
+        <li><a href= "#Uses&Research">Uses & Research</a></li>
+        <li><a href ="#Other_Fun_Foods_to_Learn_About" >Other Fun Foods to Learn About</a></li>
     </ul>
 
-    <img src = "../img/Trametes_versicolor_G4_(1).jpeg" style="height: 500;" width="500">
+    <img src = "../img/Trametes_versicolor_G4_(1).jpeg" alt = "turkeyTail" height="500">
 
     <h2 id="Overview">Overview</h2>
         <p>Trametes versicolor also known as Coriolus versicolor and Polyporus versicolor 
@@ -30,7 +30,7 @@
             lookalike is the multicolor gill polypore.
         </p>
 
-    <h2 id = "Description & Ecology">Description & Ecology</h2>
+    <h2 id ="Description&Ecology">Description & Ecology</h2>
         <p>The top surface of the cap shows typical concentric zones of different 
             colors, and the margin is always the lightest. Underneath a layer of 
             tomentum is a black layer, topping the whitish flesh. The flesh itself 
@@ -43,7 +43,8 @@
              The pore surface is whitish to light brown, with pores round and with age twisted and labyrinthine. 
              3-8 pores per millimeter.
         </p>
-    <h2 id = "Uses & Research" >Uses & Research</h2>
+
+    <h2 id ="Uses&Research" >Uses & Research</h2>
         <h3>Polysaccharide-K extract</h3>
             <p><a href = "https://en.wikipedia.org/wiki/Polysaccharide-K" >Polysaccharide-K</a> (PSK or krestin), extracted from T. versicolor, is considered safe for 
                 use as an adjuvant therapy for cancer treatment in Japan where it is known as kawaratake (roof tile mushroom) 
@@ -54,7 +55,7 @@
         </p>
 
     <footer>
-        <h2 id = "Other Fun Foods to Learn About:"> Other Fun Foods to Learn About</h2>
+        <h2 id ="Other_Fun_Foods_to_Learn_About:"> Other Fun Foods to Learn About</h2>
         <p><a href = "https://ssumri.github.io/ATLS2200Assignments/wa/wa3.html" >Mangos</a></p>
         <p><a href = "https://liviah12.github.io/wa/wa3.html">Dragon Fruit</a></p>
     </footer>
