--- a/html-midterm/page4.html
+++ b/html-midterm/page4.html
@@ -1,55 +1,89 @@
+<!DOCTYPE html>
 
 <html lang="en">
+
 <head>
+
     <meta charset="UTF-8">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page 4</title>
+
+    <title>mid-term Page 4</title>
+
     <style>
+
         img{
             width:200px;
             height:200px;
         }
+
     </style>
+
 </head>
+
 <body>
 
     <div class="navbar">
+
         <a href="/html-midterm/page1.html">Page 1</a>
         <span> | </span>
+
         <a href="/html-midterm/page2.html">Page 2</a>
         <span> | </span>
+
         <a href="/html-midterm/page3.html">Page 3</a>
         <span> | </span>
+
         <a href="/html-midterm/page4.html">Page 4</a>
         <span> | </span>
+
         <a href="html-midterm/page5.html">page 5</a>
         <span> | </span>
+
     </div>
     
     <table>
+
+
         <tr>
             <th>Dogs</th>
+
+            <td><img src="img/dogsFrolic.png" alt="dogsFrolic"></td>
+
+            <td><img src="img/dogSinging.png" alt="dogSinging"></td>
+
+            <td><img src="img/labLab.png" alt="labLab"></td>
+
+        </tr>
+
+        <tr>
+
             <th>Cats</th>
+
+            <td><img src="img/boxingCats.png" alt="boxingCats"></td>
+
+            <td><img src="img/orangeCat.png" alt="orangeCat"></td>
+
+            <td><img src="img/sunCat.png" alt="sunCat"></td>
+
+        </tr>
+
+        <tr>
+
             <th>Other?</th>
-        </tr>
-        <tr>
-            <td><img src="img/dogsFrolic.png"></td>
-            <td><img src="img/dogSinging.png">
-            <td><img src="img/labLab.png"></td>
-        </tr>
-        <tr>
-            <td><img src="img/boxingCats.png"></td>
-            <img src="img/orangeCat.png">
-            <td><img src="img/sunCat.png"></td>
-        </tr>
-        <tr>
-            <td><img src="img/diamondAlien.png"></td>
-            <img src="img/creature.png"></td>
-            <td><img src="img/aliensPeace.png"></td>
+
+            <td><img src="img/diamondAlien.png" alt="diamondAlien"></td>
+
+            <td><img src="img/creature.png" alt="creature"></td>
+
+            <td><img src="img/aliensPeace.png" alt="aliensPeace"></td>
+
         </tr>
 
     </table>
 
 </body>
+
 </html>
