--- a/html-midterm/page5.html
+++ b/html-midterm/page5.html
@@ -28,7 +28,7 @@
         <a href="/html-midterm/page4.html">Page 4</a>
         <span> | </span>
 
-        <a href="html-midterm/page5.html">page 5</a>
+        <a href="page5.html">page 5</a>
         <span> | </span>
 
     </div>
