--- a/html-midterm/page1.html
+++ b/html-midterm/page1.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-    
+
     <meta charset="UTF-8">
 
     <title>Mid-term Page 1</title>
@@ -26,7 +26,7 @@
         <a href="/html-midterm/page4.html">Page 4</a>
         <span> | </span>
 
-        <a href="html-midterm/page5.html">page 5</a>
+        <a href="page5.html">Page 5</a>
         <span> | </span>
 
     </div>
