--- a/html-midterm/page2.html
+++ b/html-midterm/page2.html
@@ -30,7 +30,7 @@
         <a href="/html-midterm/page4.html">Page 4</a>
         <span> | </span>
 
-        <a href="html-midterm/page5.html">page 5</a>
+        <a href="page5.html">Page 5</a>
         <span> | </span>
 
     </div>
