--- a/BusinessCard/index.html
+++ b/BusinessCard/index.html
@@ -52,7 +52,7 @@
 
   </section>
 
-  <section class="card">
+  <section class="card" id="secondCard" >
 
     <header>
 
@@ -64,7 +64,7 @@
 
       <img src="CassBliss.jpg" alt= "aPictureOfCassBliss">
 
-      <p>
+      <p id="secondInfo"> 
          
         31 years old<br>
         Born in North Carolina<br>
