final changes made

--- a/BusinessCard/index.html
+++ b/BusinessCard/index.html
@@ -56,7 +56,7 @@
 
     <header>
 
-      <h2>Cassidy Bliss</h2>
+      <h2 id="secondHeader">Cassidy Bliss</h2>
 
     </header>
 
@@ -79,7 +79,7 @@
 
     </article>
 
-    <footer>
+    <footer id="secondFooter">
 
       <p>Engineer, Designer, Maker and Coder </p>
 
