--- a/Overlays/overlays.html
+++ b/Overlays/overlays.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="box4">
-            <p>Cows aren't even native to the united states.</p>
+            <p>Cows aren't even native to North America.</p>
         </div>
         <div class="box5">
             <p>Regularly eating red meat and processed meat can raise the risk of type 2 diabetes, coronary heart disease, stroke and certain cancers, especially colorectal cancer</p>
