info pages styling changes

--- a/show9Details.html
+++ b/show9Details.html
@@ -6,18 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-        <p>Beethoven Violin Concerto</p>
+        <p class="title" >Beethoven Violin Concerto</p>
 
-        <p>Apr 21-23 Fri & Sat 7:30 Sunday 1:00</p>
+        <p class="date">Apr 21-23 Fri & Sat 7:30 Sunday 1:00</p>
 
-        <p>Join your Colorado Symphony and Principal Conductor Peter Oundjian in welcoming acclaimed soloist and 2021 Gramophone Artist of the Year, James Ehnes, to Boettcher Concert Hall for a reinvigoration of Beethoven’s majestic Violin Concerto. Beethoven’s output in nearly every musical genre was prolific, yet surprisingly he wrote only one concerto for the violin. The four opening drum taps that begin this masterpiece remain one of the most surprising and audacious ideas that the composer ever committed to paper, setting the stage for a transcendent work that stands among the greats of the repertoire. Bruckner’s Seventh Symphony emphatically elevated him into the ranks of legendary 19th century composers in a work that is epic in scope and scale, with knowing nods to Beethoven’s Third Symphony and Wagner’s Ring Cycle, including his use of the famous Wagner tubas. This revered work caps an awe-inspiring program of inspiring masterworks led by Maestro Oundjian.</p>
+        <p class="description">Join your Colorado Symphony and Principal Conductor Peter Oundjian in welcoming acclaimed soloist and 2021 Gramophone Artist of the Year, James Ehnes, to Boettcher Concert Hall for a reinvigoration of Beethoven’s majestic Violin Concerto. Beethoven’s output in nearly every musical genre was prolific, yet surprisingly he wrote only one concerto for the violin. The four opening drum taps that begin this masterpiece remain one of the most surprising and audacious ideas that the composer ever committed to paper, setting the stage for a transcendent work that stands among the greats of the repertoire. Bruckner’s Seventh Symphony emphatically elevated him into the ranks of legendary 19th century composers in a work that is epic in scope and scale, with knowing nods to Beethoven’s Third Symphony and Wagner’s Ring Cycle, including his use of the famous Wagner tubas. This revered work caps an awe-inspiring program of inspiring masterworks led by Maestro Oundjian.</p>
 
-        <p>Featured Artists
+        <p class="artists">Featured Artists
             Peter Oundjian, conductor
             James Ehnes, violin
             </p>
 
-        <p>Repertoire
+        <p class="repertoire">Repertoire
             BEETHOVEN  Violin Concerto in D major, Op. 61
             BRUCKNER  Symphony No. 7 in E major, WAB 107
             </p>
