--- a/show2Details.html
+++ b/show2Details.html
@@ -6,22 +6,22 @@
     <title>Document</title>
 </head>
 <body>
-    <p>
+    <p class="title">
         Beethoven Symphony No. 3 with Peter Oundjian
     </p>
         
-    <p>NOV 4-6 FRI-SAT 7:30 SUN 1:00</p>
+    <p class="date">NOV 4-6 FRI-SAT 7:30 SUN 1:00</p>
 
-    <p>History is replete with turning points and with the completion of his revolutionary Third Symphony, Beethoven forever changed the idea of what a symphony could be. A clear bridging of the Classical and Romantic eras, the Eroica (“Heroic”) Symphony explores what it means to be human in a work that is larger and more emotional than a symphony had ever been before. In it, Beethoven’s passion rises to the forefront, using broad strokes of sound to convey the very nature of humanity, while reimagining a future for music filled with endless possibility. Cellist Sterling Elliott — a 2021 Avery Fisher Career Grant recipient — brings youthful energy to Elgar’s Cello Concerto, a deeply emotional work filled with soaring themes and quiet anguish that will leave audiences entranced. The Colorado Symphony Chorus takes center stage on Vaughan Williams’ Walt Whitman-inspired Toward the Unknown Region, a remarkable marriage of music and text, with Williams’ inspired music perfectly encapsulating Whitman’s noble, humanistic aspirations. These works will spring to life in the hands of Maestro Peter Oundjian and your Colorado Symphony.
+    <p class="description">History is replete with turning points and with the completion of his revolutionary Third Symphony, Beethoven forever changed the idea of what a symphony could be. A clear bridging of the Classical and Romantic eras, the Eroica (“Heroic”) Symphony explores what it means to be human in a work that is larger and more emotional than a symphony had ever been before. In it, Beethoven’s passion rises to the forefront, using broad strokes of sound to convey the very nature of humanity, while reimagining a future for music filled with endless possibility. Cellist Sterling Elliott — a 2021 Avery Fisher Career Grant recipient — brings youthful energy to Elgar’s Cello Concerto, a deeply emotional work filled with soaring themes and quiet anguish that will leave audiences entranced. The Colorado Symphony Chorus takes center stage on Vaughan Williams’ Walt Whitman-inspired Toward the Unknown Region, a remarkable marriage of music and text, with Williams’ inspired music perfectly encapsulating Whitman’s noble, humanistic aspirations. These works will spring to life in the hands of Maestro Peter Oundjian and your Colorado Symphony.
     </p>
 
-    <p>Featured Artists
+    <p class="artists">Featured Artists
     Peter Oundjian, conductor
     Sterling Elliott, cello
     Colorado Symphony Chorus, Duain Wolfe, director
     </p>
     
-    <p>Repertoire
+    <p class="repertoire">Repertoire
     VAUGHAN WILLIAMS  Toward the Unknown Region
     ELGAR  Cello Concerto in E minor, Op. 85
     BEETHOVEN  Symphony No. 3 in E-flat major, Op. 55 “Eroica”
