--- a/show3Details.html
+++ b/show3Details.html
@@ -6,15 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Tchaikovsky Piano Concerto No. 1 with Olga Kern</p>
-    <p>DEC 2-4 FRI-SAT 7:30 SUN 1:00</p>
-    <p>Peter Ilyich Tchaikovsky — so highly regarded for his symphonic compositions — placed himself among the greats of the keyboard with the completion of his First Piano Concerto. The work is filled with towering grandeur, gorgeously lyrical melodies, and unmistakable Romantic spirit. For pianists what Everest is to climbers, the Concerto in B-flat has become the standard against which all virtuosos must measure themselves, featuring iconic opening flourishes and a pyrotechnics-filled finale. Denver favorite Olga Kern lends her dazzling technique and innate musicality to this cornerstone of the Classical Canon. Your Colorado Symphony and Conductor Christian Reif — dubbed a “remarkable talent” by the San Francisco Chronicle — conclude the program with Shostakovich’s stormy and brooding Tenth Symphony. Written to symbolize the power of the people, Shostakovich employs memorable themes and complex orchestrations that mirror his own battles against Soviet oppression. Ending on a triumphant note, this is a finale that will leave you breathless.
+    <p class="title">Tchaikovsky Piano Concerto No. 1 with Olga Kern</p>
+    <p class="date">DEC 2-4 FRI-SAT 7:30 SUN 1:00</p>
+    <p class="description">Peter Ilyich Tchaikovsky — so highly regarded for his symphonic compositions — placed himself among the greats of the keyboard with the completion of his First Piano Concerto. The work is filled with towering grandeur, gorgeously lyrical melodies, and unmistakable Romantic spirit. For pianists what Everest is to climbers, the Concerto in B-flat has become the standard against which all virtuosos must measure themselves, featuring iconic opening flourishes and a pyrotechnics-filled finale. Denver favorite Olga Kern lends her dazzling technique and innate musicality to this cornerstone of the Classical Canon. Your Colorado Symphony and Conductor Christian Reif — dubbed a “remarkable talent” by the San Francisco Chronicle — conclude the program with Shostakovich’s stormy and brooding Tenth Symphony. Written to symbolize the power of the people, Shostakovich employs memorable themes and complex orchestrations that mirror his own battles against Soviet oppression. Ending on a triumphant note, this is a finale that will leave you breathless.
     </p>    
-    <p>Featured Artists
+    <p class="artists">Featured Artists
     Christian Reif, conductor
     Olga Kern, piano</p>
     
-    <p>Repertoire
+    <p class="repertoire">Repertoire
     TCHAIKOVSKY  Piano Concerto No. 1 in B-flat major, Op. 23
     SHOSTAKOVICH  Symphony No. 10 in E minor, Op. 93</p>
 
