--- a/show6Details.html
+++ b/show6Details.html
@@ -6,20 +6,20 @@
     <title>Document</title>
 </head>
 <body>
-        <p>
+        <p class="title">
             Beethoven’s Emperor Concerto
             </p>
 
-        <p>February 24-26 FRI-SAT 730 SUN 1</p>
+        <p class="date">February 24-26 FRI-SAT 730 SUN 1</p>
 
-        <p>One of the most accomplished of all piano works, Beethoven’s “Emperor” Concerto features a striking opening movement and a glorious finale, with beauty and virtuosic style throughout that makes it one of the composer’s best. Your Colorado Symphony welcomes electrifying pianist Stewart Goodyear who is just the firebrand to live up to the wiles of this majestic and vigorously demanding concerto. Teddy Abrams — Musical America’s 2022 Conductor of the Year — brings dynamic flair to Perkinson’s energetic Worship Overture. Prokofiev’s Fifth Symphony was so well received that within months of its American premiere, a portrait of the composer was featured on the cover of Time magazine. Prokofiev wrote that he “conceived of it as glorifying the grandeur of the human spirit, praising the free and happy man— his strength, his generosity, and the purity of his soul." This heroic and joyous work offers a brilliant conclusion to a performance of energizing masterworks.</p>
+        <p class="description">One of the most accomplished of all piano works, Beethoven’s “Emperor” Concerto features a striking opening movement and a glorious finale, with beauty and virtuosic style throughout that makes it one of the composer’s best. Your Colorado Symphony welcomes electrifying pianist Stewart Goodyear who is just the firebrand to live up to the wiles of this majestic and vigorously demanding concerto. Teddy Abrams — Musical America’s 2022 Conductor of the Year — brings dynamic flair to Perkinson’s energetic Worship Overture. Prokofiev’s Fifth Symphony was so well received that within months of its American premiere, a portrait of the composer was featured on the cover of Time magazine. Prokofiev wrote that he “conceived of it as glorifying the grandeur of the human spirit, praising the free and happy man— his strength, his generosity, and the purity of his soul." This heroic and joyous work offers a brilliant conclusion to a performance of energizing masterworks.</p>
 
-        <p>Featured Artists
+        <p class="artists">Featured Artists
             Teddy Abrams, conductor
             Stewart Goodyear, piano
             </p>
         
-        <p>Repertoire
+        <p class="repertoire">Repertoire
             PERKINSON  Worship: A Concert Overture
             BEETHOVEN  Piano Concerto No. 5 in E-flat major, Op. 73, “Emperor"
             PROKOFIEV  Symphony No. 5 in B-flat major, Op. 100
