--- a/show7Details.html
+++ b/show7Details.html
@@ -6,14 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Bartók Concerto for Orchestra</p>
-    <p>March 10th-12th FRI-SAT 7:30 SUN 1:00</p>
-    <p>One of the foremost conductors of his generation, Alexander Shelley joins your Colorado Symphony for a program that will leave you simply spellbound. Spanish composer Joaquín Rodrigo’s classical guitar concerto Concierto de Aranjuez fills the concert hall with the immortal sounds and traditions of Spanish romanticism in a must-hear interpretation from guitar virtuoso Pablo Sainz Villegas who was hailed as “The global ambassador of Spanish guitar” by Billboard Magazine. Anna Clyne’s This Midnight Hour is mysterious and foreboding, with musical twists and turns that show why she is considered one of the preeminent composers of our time. Bartók’s Concerto for Orchestra was called a concerto rather than a symphony as each section of instruments is treated in a soloistic and virtuosic way, combining elements of Western art music and Hungarian folk songs in a stirring finale to an evening of symphonic sublimity.</p>
-    <p>Featured Artists
+    <p class="title">Bartók Concerto for Orchestra</p>
+    <p class="date">March 10th-12th FRI-SAT 7:30 SUN 1:00</p>
+    <p class="description">One of the foremost conductors of his generation, Alexander Shelley joins your Colorado Symphony for a program that will leave you simply spellbound. Spanish composer Joaquín Rodrigo’s classical guitar concerto Concierto de Aranjuez fills the concert hall with the immortal sounds and traditions of Spanish romanticism in a must-hear interpretation from guitar virtuoso Pablo Sainz Villegas who was hailed as “The global ambassador of Spanish guitar” by Billboard Magazine. Anna Clyne’s This Midnight Hour is mysterious and foreboding, with musical twists and turns that show why she is considered one of the preeminent composers of our time. Bartók’s Concerto for Orchestra was called a concerto rather than a symphony as each section of instruments is treated in a soloistic and virtuosic way, combining elements of Western art music and Hungarian folk songs in a stirring finale to an evening of symphonic sublimity.</p>
+    <p class="artists">Featured Artists
         Alexander Shelley, conductor
         Pablo Sainz Villegas, guitar
         </p>
-    <p>Repertoire
+    <p class="repertoire">Repertoire
         ANNA CLYNE  This Midnight Hour
         RODRIGO  Concierto de Aranjuez
         BARTÓK  Concerto for Orchestra
