--- a/show4Details.html
+++ b/show4Details.html
@@ -4,25 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="showDetails.css">
 </head>
 <body>
-        <p class="title">Ravel’s Daphnis et Chloé</p>
+        <p class="title">Ravel’s: Daphnis et Chloé</p>
 
-        <p class="date">JAN13-15 FRI-SAT 7:30 SUN 1:00</p>
+        <p class="date">JAN13-15 <br> <br>FRI-SAT 7:30 <br>SUN 1:00</p>
 
         <p class="description">Be still my heart! A whirling celebration of pagan love awaits listeners with Ravel's Daphnis et Chloé, which he called a “symphonie chorégraphique” rather than a ballet, reflecting a sense of powerful, dramatic music which defies category and springs to life on terms all its own. Ravel’s exceptional score creates a sensuous atmosphere with a lingering explosiveness residing just underneath the surface. Scored for a massive orchestra and utilizing the ethereal, intangible tones of a wordless chorus, Ravel often spotlights solo players in a way that recalls chamber music rather than merely using it as a show of force, pulling listeners into a vast, visceral dreamscape of shimmering colors and hypnotic motion. Szymanowski’s First Violin Concerto will shine in the hands of Concertmaster Yumi Hwang-Williams, who brings expressive virtuosity to one of the first violin concertos of the modern era. The program opens with Lili Boulanger’s D’un matin de printemps, meaning ‘On a spring morning,’ capturing the genius of this prodigious composer who wrote over 50 compositions before tragically passing at the age of just 24. This sweet and playful ode to spring is just the transportive overture to carry away your winter doldrums.</p>
 
-        <p class="artists">Featured Artists
-            Kevin John Edusei, conductor
-            Yumi Hwang-Williams, violin
-            Colorado Symphony Chorus, Duain Wolfe, director
-        </p>
-        
-        <p class="repertoire">Repertoire
-            BOULANGER  D'un matin de printemps
-            SZYMANOWSKI  Violin Concerto No. 1, Op. 35
-            RAVEL  Daphnis et Chloé
-        </p>
+        <div class="flex">
+            <p class="artists"><b>Featured Artists:</b> <br> <br>
+                Kevin John Edusei, conductor <br>
+                Yumi Hwang-Williams, violin<br>
+                Colorado Symphony Chorus, Duain Wolfe, director
+            </p>
+            
+            <p class="repertoire"> <b>Repertoire:</b> <br> <br>
+                BOULANGER  D'un matin de printemps<br>
+                SZYMANOWSKI  Violin Concerto No. 1, Op. 35<br>
+                RAVEL  Daphnis et Chloé
+            </p>
+
+        </div>
 
 </body>
 </html>
