--- a/show7Details.html
+++ b/show7Details.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="showDetails.css">
 </head>
 <body>
     <p class="title">Bartók Concerto for Orchestra</p>
-    <p class="date">March 10th-12th FRI-SAT 7:30 SUN 1:00</p>
+    <p class="date">March 10th-12th  <br> <br>FRI-SAT 7:30 <br>SUN 1:00</p>
     <p class="description">One of the foremost conductors of his generation, Alexander Shelley joins your Colorado Symphony for a program that will leave you simply spellbound. Spanish composer Joaquín Rodrigo’s classical guitar concerto Concierto de Aranjuez fills the concert hall with the immortal sounds and traditions of Spanish romanticism in a must-hear interpretation from guitar virtuoso Pablo Sainz Villegas who was hailed as “The global ambassador of Spanish guitar” by Billboard Magazine. Anna Clyne’s This Midnight Hour is mysterious and foreboding, with musical twists and turns that show why she is considered one of the preeminent composers of our time. Bartók’s Concerto for Orchestra was called a concerto rather than a symphony as each section of instruments is treated in a soloistic and virtuosic way, combining elements of Western art music and Hungarian folk songs in a stirring finale to an evening of symphonic sublimity.</p>
-    <p class="artists">Featured Artists
-        Alexander Shelley, conductor
-        Pablo Sainz Villegas, guitar
-        </p>
-    <p class="repertoire">Repertoire
-        ANNA CLYNE  This Midnight Hour
-        RODRIGO  Concierto de Aranjuez
-        BARTÓK  Concerto for Orchestra
-        </p>
     
+    <div class="flex">
+        <p class="artists"><b>Featured Artists:</b> <br> <br>
+            Alexander Shelley, conductor<br>
+            Pablo Sainz Villegas, guitar<br>
+        </p>
+        <p class="repertoire"><b>Repertoire:</b> <br> <br>
+            ANNA CLYNE  This Midnight Hour<br>
+            RODRIGO  Concierto de Aranjuez<br>
+            BARTÓK  Concerto for Orchestra
+        </p>
+    </div>
 </body>
 </html>
