--- a/show8Details.html
+++ b/show8Details.html
@@ -4,21 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="showDetails.css">
 </head>
 <body>
         <p class="title">Brahms Requiem with Peter Oundjian</p>
-        <p class="date">Mar 24–26 FRI–SAT 7:30 SUN 1:00</p>
+        <p class="date">Mar 24–26  <br> <br>FRI–SAT 7:30<br> SUN 1:00</p>
         <p class="description">Unlike other Requiem Masses, Brahms’ A German Requiem is not primarily a Mass for the dead. Instead, it is intended as comfort and solace for those left behind as they mourn the death of others. Confronting life as much as it does death, Brahms further differentiates his Requiem by setting excerpts from the Lutheran Bible and apocrypha in German instead of the Catholic, Latin text used in the Requiem Masses by Mozart, Verdi, and Berlioz. The Colorado Symphony Chorus and two vocal soloists lend distinction to this stunning masterpiece, which remains one of the most revered choral works ever composed. A taste for the exotic surfaces often in the catalogue of Maurice Ravel and his orchestral song cycle Shéhérazade is no exception. Named for the protagonist of One Thousand and One Nights, Shéhérazade is a woman who employs her imagination as a means of escape. "Je voudrais voir...", she repeats, meaning "I would like to see...", this refrain sets the tone for Ravel’s song cycle which drips with color evoking images of the far east. Drawing on music from the opera, Weber’s Overture to Oberon is a celebration of the supernatural realm. Like in Mozart's The Magic Flute, Weber establishes Oberon's horn as a mystical instrument and its call as a leitmotif throughout the overture, unleashing an exuberant conversation between instrumental voices and concluding with a virtuosic flourish conducted by Maestro Peter Oundjian.</p>
-        <p class="artists">Featured Artists
-            Peter Oundjian, conductor
-            Colorado Symphony Chorus, Duain Wolfe, director
-            Karina Gauvin, soprano
-            Joshua Hopkins, baritone
+        
+        <div class="flex">
+            <p class="artists"><b>Featured Artists:</b> <br> <br>
+                Peter Oundjian, conductor<br>
+                Colorado Symphony Chorus:<br>
+                Duain Wolfe, director<br>
+                Karina Gauvin, soprano<br>
+                Joshua Hopkins, baritone
             </p>
-        <p class="repertoire">Repertoire
-            WEBER  Oberon: Overture, J. 306
-            RAVEL  Shéhérazade
-            BRAHMS  Ein deutsches Requiem, Op. 45
+            <p class="repertoire"><b>Repertoire:</b> <br> <br>
+                WEBER  Oberon: Overture, J. 306<br>
+                RAVEL  Shéhérazade<br>
+                BRAHMS  Ein deutsches Requiem, Op. 45
             </p>
+        </div>
 </body>
 </html>
