--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     
                     <div class="artist">Beethoven’s: <em>Emperor Concerto</em></div>
                         <div class="tooltiptext">
-                            One of the most accomplished of all piano works, Beethoven’s “Emperor” Concerto features a striking opening movement and a glorious finale, with beauty and virtuosic style throughout that makes it one of the composer’s best. This heroic and joyous work offers a brilliant conclusion to a performance of energizing masterworks.
+                            One of the most accomplished of all piano works, Beethoven’s “Emperor” Concerto features a striking opening movement and a glorious finale, with beauty and virtuosic style throughout that makes it one of the composer’s best.
 
                     </div>
                 </div>
