--- a/ica/ica13/final/badForm.html
+++ b/ica/ica13/final/badForm.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Enter your phone number and submit</h1>
-    
+    <form>
+        <p>Enter first number here</p>
+        <input type="text" id="number1"/><br/>
+        <input type="button" value = "submit" id="button1"/>
+        <p id="output1"></p>
+    </form>
 </body>
 </html>
